kv/RocksDBStore: break out of compaction thread early on shutdown

Fixes: https://tracker.ceph.com/issues/43587
Signed-off-by: Sage Weil <sage@redhat.com>
(cherry picked from commit 9fab24504918c2df464a2e99f2629c258ba316ff)