src/kv/RocksDBStore.cc
@@ -1295,7 +1295,7 @@ void RocksDBStore::compact_thread_entry()
   compact_queue_lock.Lock();
   dout(10) << __func__ << " enter" << dendl;
   while (!compact_queue_stop) {
-    while (!compact_queue.empty()) {
+    if (!compact_queue.empty()) {
       pair<string,string> range = compact_queue.front();
       compact_queue.pop_front();
       logger->set(l_rocksdb_compact_queue_len, compact_queue.size());
